# YandexFotkiSaver

./: .autotools  .cproject  .project  AUTHORS  Makefile.am  Makefile.in  configure  configure.ac
data/: yandexfotki.desktop  yandexfotki_dri.desktop
debian/: README  changelog  control  copyright
src/: CBasePhotoSprite.cpp  CBasePhotoSprite.h  CConfig.cpp  CConfig.h  CFileNames.cpp  CFileNames.h  CHTTP.cpp  CHTTP.h  CLogo.cpp  CLogo.h  CPhotoSpriteLoader.cpp  CPhotoSpriteLoader.h  CXScreenSaver.cpp  CXScreenSaver.h  CYandexFotkiScreensaver.cpp  CYandexFotkiScreensaver.h  LogoImageData.h  Makefile.am  Makefile.in  StringsCP1251.h  YandexFotkiSaver.cpp  global.h
src/PhotoSprites/: CBaseRectPhotoSprite.cpp  CBaseRectPhotoSprite.h  CFadeRectPhotoSprite.cpp  CFadeRectPhotoSprite.h  CMacEffectPhotoSprite.cpp  CMacEffectPhotoSprite.h  CMosaicPhotoSprite.cpp  CMosaicPhotoSprite.h  CPanoramPhotoSprite.cpp  CPanoramPhotoSprite.h  CWheelClockwisePhotoSprite.cpp  CWheelClockwisePhotoSprite.h
